# straight-line-programs

./: .gitignore  README.md  pyproject.toml
notebooks/: straight_line_programs_examples.ipynb
src/straight_line_programs/: __init__.py  base.py  errors.py  islp.py  rlslp.py  rules.py  slp.py
tests/: test_access.py  test_islp.py  test_rlslp.py  test_slp.py  test_validation.py
