[project]
name = "straight-line-programs"
version = "0.1.0"
description = "research-oriented library for Straight-Line Programs (SLPs) and variants (RLSLP, ISLP) "
readme = "README.md"
authors = [
    { name = "Moritz Groß", email = "hi@mgross.dev" }
]
requires-python = ">=3.10"
dependencies = [
    "ipykernel",
    "pytest",
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
